# lbpcascade_animeface

./: README.md
examples/: CMakeLists.txt  detect.cpp
